# sem_sim

./: .env.example  .gitignore  README.md  logger_config.json  main.py  pyproject.toml  test.ipynb
data/: example.csv  synth_set.csv
sem_sim/configuration/: configuration.py
sem_sim/logger/: logger.py
sem_sim/repositories/: gigachat.py  hfrepo.py
sem_sim/use_cases/: sent_processor.py  utils.py
