[project]
name = "sem-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "gigachat (>=0.1.39.post1,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "streamlit (>=1.45.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.notebook.dependencies]
pandas = "^2.2.3"
tqdm = "^4.67.1"

